<resources>

    <string name="app_name">NutriMeter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_menu_diary">Diary</string>
    <string name="drawer_menu_me">Me</string>
    <string name="drawer_menu_my_food">My Food</string>
    <string name="drawer_menu_shopping_list">Shopping List</string>

    <string name="auth_error_password_invalid">Password must contain at least 8 characters</string>
    <string name="auth_error_email_invalid">Please enter a valid email address</string>
    <string name="auth_error_email_empty">Please type your email</string>
    <string name="auth_error_password_empty">Please enter your password</string>
    <string name="auth_error_name_empty">Please enter your name</string>
    <string name="bottomSheet_addTo_Favorites">Favorites</string>
    <string name="bottomSheet_addTo_Fridge">Fridge</string>
    <string name="bottomSheet_addTo_Meal">Meal</string>
    <string name="bottomSheet_addTo_ShoppingList">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_config_gender_male">Male</string>
    <string name="auth_config_gender_female">FEMALE</string>
    <string name="auth_config_gender_metabolism">Lets start with your metabolism</string>
    <string name="auth_config_gender_welcome">Welcome,</string>
    <string name="auth_config_age_btn_next">Next</string>
    <string name="auth_config_age_et_hint">Your age</string>
    <string name="auth_config_age_label">How old is your body?</string>
    <string name="auth_config_et_autofillhints">age</string>
    <string name="auth_config_height_label">What\'s your height?</string>
    <string name="auth_config_height_et_hint">height</string>
    <string name="auth_config_height_btn_next">Next</string>
    <string name="auth_config_plan_label">What is your goal?</string>
    <string name="auth_config_plan_loseWeight">Lose Weight</string>
    <string name="auth_config_plan_maintainWeight_btn">Maintain Weight</string>
    <string name="auth_config_plan_gainWeight_btn">Gain Weight</string>
    <string name="height_centimeters">cm</string>
    <string name="height_feet">feet</string>
    <string name="hint_height">height</string>
    <string name="measure_system_metric">metric</string>
    <string name="measure_system_imperial">imperial</string>
    <string name="auth_config_weight_finish_btn">Finish</string>
    <string name="hint_weight">weight</string>
    <string name="auth_config_weight_label">One more step</string>
    <string name="auth_config_current_weight_label">Current weight</string>
    <string name="auth_config_goal_weight_label">Your goal weight</string>
    <string name="height_inches">inches</string>
    <string name="radio_btn_metric">metric</string>
    <string name="radio_btn_imperial">imperial</string>
    <string name="weight_system_metric">kg</string>
    <string name="weight_system_imperial">lbs</string>
    <string name="auth_reset_password_your_email">Your Email</string>
    <string name="auth_reset_password_message">Please enter the email address associated with your account to receive instruction for reseting your password.</string>
    <string name="auth_reset_password_btn_send">Send</string>
    <string name="auth_reset_password_dialog_label">Forgotten password?</string>
    <string name="auth_connect_title">Connect</string>
    <string name="auth_connect_subtitle">using email address</string>
    <string name="auth_connect_hint_et_email">Email</string>
    <string name="auth_connect_btn_next">Next</string>
    <string name="auth_continue_continue_using">Continue using</string>
    <string name="auth_continue_other_method">other method.</string>
    <string name="logo_contentDescription">Logo NutriMeter</string>
    <string name="auth_ep_create_account_title_sign_up">Sign up,</string>
    <string name="auth_ep_create_account_title_sign_up_subtitle">using email address</string>
    <string name="auth_ep_create_account_hint_name_et">Your name</string>
    <string name="auth_ep_create_account_hint_password_et">Password</string>
    <string name="auth_ep_create_account_create_account_btn">Create Account</string>
    <string name="auth_ep_create_account_continue_using">Continue using</string>
    <string name="auth_ep_create_account_other_method">other method.</string>
    <string name="auth_login_title">Welcome back,</string>
    <string name="auth_login_subtitle">using email address</string>
    <string name="auth_login_hint_password">Password</string>
    <string name="dividerContentDescription">divider</string>
    <string name="auth_login_btn_login">Login</string>
    <string name="auth_login_forgot_password">I forgot my password</string>
    <string name="auth_login_continue_using">Continue using</string>
    <string name="auth_login_other_method">other method.</string>
    <string name="error_invalid_age">\"Invalid value! Please enter a number between 13 and 120 \"</string>
    <string name="error_invalid_inches_value">Invalid value!\nEnter a value between 0 and 12</string>
    <string name="error_invalid_feet_value">Invalid value!</string>
    <string name="error_invalid_value_cm">Invalid value</string>
    <string name="error_goal_weight">Nice try! Now try something more concrete!</string>
    <string name="weight_lbs">lbs</string>
    <string name="weight_kg">kg</string>


</resources>