<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_menu_diary_timeline"
            android:title="@string/drawer_menu_diary" />
        <item
            android:id="@+id/nav_my_food"
            android:icon="@drawable/ic_menu_my_food"
            android:title="@string/drawer_menu_my_food" />
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/ic_menu_me"
            android:title="@string/drawer_menu_me" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_menu_shopping_list"
            android:title="@string/drawer_menu_shopping_list" />
    </group>

</menu>