<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/box_white_borderless_radius16"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_to_bs_favorites"
        style="@style/BottomSheetItem"
        android:layout_marginTop="@dimen/dp_16_MARGIN"
        android:background="@drawable/selector_bs_item_bg"
        android:text="@string/bottomSheet_addTo_Favorites" />

    <TextView
        android:id="@+id/add_to_bs_fridge"
        android:background="@drawable/selector_bs_item_bg"
        style="@style/BottomSheetItem"
        android:text="@string/bottomSheet_addTo_Fridge" />


    <TextView
        android:id="@+id/add_to_bs_meal"
        android:background="@drawable/selector_bs_item_bg"
        style="@style/BottomSheetItem"
        android:text="@string/bottomSheet_addTo_Meal" />

    <TextView
        android:id="@+id/add_to_bs_shopping_list"
        android:background="@drawable/selector_bs_item_bg"
        style="@style/BottomSheetItem"
        android:layout_marginBottom="@dimen/dp_16_MARGIN"
        android:text="@string/bottomSheet_addTo_ShoppingList" />

</LinearLayout>