<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:minWidth="360dp"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="360dp"
        android:layout_marginBottom="16dp"
        android:text="@string/auth_reset_password_dialog_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="360dp"
        android:textSize="12sp"
        android:layout_marginBottom="16dp"
        android:text="@string/auth_reset_password_message" />

    <EditText
        android:id="@+id/textInputEditText_signIn_restartPassword_email"
        style="@style/EditTextAuth"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_0_view_DIM"
        android:layout_marginEnd="@dimen/dp_0_view_DIM"
        android:layout_marginBottom="@dimen/dp_16_MARGIN"

        android:background="@drawable/box_white_accent_border_radius16"

        android:hint="@string/auth_reset_password_your_email"

        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_ep_name_et" />

    <Button
        android:id="@+id/btn_singIn_resetPassword_send"
        style="@style/Button.Nutrimiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_accent_borderless_radius16"
        android:backgroundTint="@color/colorAccent"
        android:layout_gravity="end"
        android:text="@string/auth_reset_password_btn_send" />


</LinearLayout>