<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"

    app:startDestination="@id/nav_search_usda">



     <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.nutrimeter.ui.diary.Diary"
        android:label="@string/drawer_menu_diary"
        tools:layout="@layout/fragment_diary" >

        <action
            android:id="@+id/action_nav_diary_to_auth_graph"
            app:destination="@id/auth_graph" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_food"
        android:name="com.example.nutrimeter.ui.my_food.MyFood"
        android:label="@string/drawer_menu_my_food"
        tools:layout="@layout/fragment_my_food" >
        <action
            android:id="@+id/action_nav_my_food_to_nav_shopping_list"
            app:destination="@id/nav_shopping_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_me"
        android:name="com.example.nutrimeter.ui.me.Me"
        android:label="@string/drawer_menu_me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.example.nutrimeter.ui.shopping_list.ShoppingList"
        android:label="@string/drawer_menu_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <include app:graph="@navigation/auth_nav_graph" />
    <fragment
        android:id="@+id/nav_search_usda"
        android:name="com.example.nutrimeter.ui.search_food.SearchUsda"
        android:label="search_usda_fragment"
        tools:layout="@layout/search_usda_fragment" >
        <action
            android:id="@+id/action_nav_search_usda_to_nav_my_food"
            app:destination="@id/nav_my_food" />
        <action
            android:id="@+id/action_nav_search_usda_to_foodDetail"
            app:destination="@id/foodDetail" />
    </fragment>
    <fragment
        android:id="@+id/foodDetail"
        android:name="com.example.nutrimeter.ui.food_detail.FoodDetail"
        tools:layout="@layout/fragment_food_detail"
        android:label="FoodDetail" >
        <action
            android:id="@+id/action_foodDetail_to_nav_my_food"
            app:destination="@id/nav_my_food" />
        <action
            android:id="@+id/action_foodDetail_to_addToBottomSheetFragment"
            app:destination="@id/addToBottomSheetFragment" />
    </fragment>


    <dialog
        android:id="@+id/addToBottomSheetFragment"
        android:name="com.example.nutrimeter.ui.food_detail.AddToBottomSheetFragment"
        tools:layout="@layout/dialog_add_to_bs_fragment"
        android:label="AddToBottomSheetFragment" />


</navigation>