<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_auth_email_and_password"
        tools:context=".ui.auth.FirstConfig">

            <TextView
                android:id="@+id/auth_config_gender_welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:text="@string/auth_config_gender_welcome"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_34_text_H4"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/auth_config_gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="188dp"
                android:text="@string/auth_config_gender_metabolism"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_24_text_H5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/auth_config_gender_female_btn"
                android:layout_width="@dimen/dp_120_view_DIM"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@drawable/box_accent_borderless_radius16"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/auth_config_gender_female"
                app:layout_constraintEnd_toEndOf="@+id/auth_config_gender_label"
                app:layout_constraintStart_toStartOf="@+id/auth_config_gender_label"
                app:layout_constraintTop_toBottomOf="@+id/auth_config_gender_label" />

        <Button
            android:id="@+id/auth_config_gender_male_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/box_accent_borderless_radius16"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/auth_config_gender_male"
            app:layout_constraintEnd_toEndOf="@+id/auth_config_gender_female_btn"
            app:layout_constraintStart_toStartOf="@+id/auth_config_gender_female_btn"
            app:layout_constraintTop_toBottomOf="@+id/auth_config_gender_female_btn" />


        <include
            android:id="@+id/auth_config_gender_bottom_nav_indicators"
            layout="@layout/auth_bottom_nav_indicator_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            app:activeView="@{1}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
